Fixed visibility

--- a/styles/scss/demo.scss
+++ b/styles/scss/demo.scss
@@ -249,7 +249,7 @@
     q {
       font-size:1.5em;
       line-height:170%;
-      padding-right:2em;
+      padding:0 2em 2em 0;
     }
 
   }
